--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,16 @@
     <!-- Bootstrap 4.5.0 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <style>
+        a {
+            text-decoration: none !important;
+            transition: opacity 0.3s ease;
+        }
+        a:hover,
+        a:focus{
+            opacity: 0.6;
+        }
+    </style>
 </head>
 
 <body>
