--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,14 +1,7 @@
 <div class="container w-100 bg-dark text-white py-4" style="max-width: 100%;">
-    <div class="row mt-5 mx-5">
-        <div class="col-12 col-md">
-            <h5>VegeKet</h5>
-            <small class="d-block mb-3 text-muted">&copy; 2017-2021</small>
-        </div>
-        <div class="col-6 col-md">
-            <h5>特徴</h5>
-            <ul class="list-unstyled text-small ">
-                <li><a class="link-secondary text-muted" href="/">Top</a></li>
-            </ul>
+    <div class="row mt-1 mx-5">
+        <div class="col-12 col-md mb-3 text-muted">
+            <h1><a class="link-secondary text-muted" href="/">VegeKet</a></h1>
         </div>
         <div class="col-6 col-md">
             <h5>リソース</h5>
@@ -35,4 +28,7 @@
             </ul>
         </div>
     </div>
+</div>
+<div class="container w-100 bg-light py-2 text-center" style="max-width: 100%;">
+    <small class="d-block mb-3 text-muted">&copy; Vegeket 2025</small>
 </div>
