--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,7 +5,7 @@
 
 {% include 'snippets/headline.html' %}
  
-<div class="container px-5" style="max-width:100%">
+<div class="container px-5" style="max-width:100%" data-aos="fade-up" data-aos-once="true">
   <div class="row my-5">
     {% for object in object_list %}
     <div class="col-12 col-lg-3 my-3">
