--- a/templates/snippets/headline.html
+++ b/templates/snippets/headline.html
@@ -1,5 +1,5 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
-  <div class="p-lg-5 mx-auto my-5">
+  <div class="p-lg-5 mx-auto my-5" data-aos="fade-up" data-aos-offset="-200" >
     <h1 class="display-4 fw-normal">VegeKet</h1>
     <p class="lead fw-normal">新鮮な野菜や果物が揃ったECマーケットです。</p>
   </div>
