--- a/templates/pages/cancel.html
+++ b/templates/pages/cancel.html
@@ -4,8 +4,9 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-12">
-      <h1>Cancel</h1>
-      <p>うまく処理されませんでした。カートは<a href="/cart/">こちら</a></p>
+      <h1>決済エラー</h1>
+      <p>決済処理時に問題が発生しました。お手数をおかけしますが、決済方法をご確認いただき再度ご購入手続きをお試しください。</p>
+      <p>カートは<a href="/cart/">こちら</a></p>
     </div>
   </div>
 </div>
