--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,7 +1,7 @@
 <div class="container w-100 bg-dark text-white py-4" style="max-width: 100%;">
     <div class="row mt-1 mx-5">
         <div class="col-12 col-md mb-3 text-muted">
-            <h1><a class="link-secondary text-muted" href="/">VegeKet</a></h1>
+            <h1><a class="link-secondary text-muted" href="/">{{ TITLE }}</a></h1>
         </div>
         <div class="col-6 col-md">
             <h5>リソース</h5>
