--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,6 +6,19 @@
 {% include 'snippets/headline.html' %}
  
 <div class="container px-5" style="max-width:100%" data-aos="fade-up" data-aos-once="true">
+
+  <div class="row my-5">
+    {% for object in POPULAR_ITEMS %}
+    {% if forloop.counter < 4 %}
+    <div class="col-12 col-lg-4 my-3">
+      <button type="button" class="btn btn-danger rounded-0">人気{{ forloop.counter }}位</button>
+      {% include 'snippets/item_box.html' %}
+    </div>
+    {% endif %}
+    {% endfor %}
+  </div>
+
+
   <div class="row my-5">
     {% for object in object_list %}
     <div class="col-12 col-lg-3 my-3">
