--- a/templates/pages/item.html
+++ b/templates/pages/item.html
@@ -53,5 +53,18 @@
       </div>
     </div>
   </div>
+
+
+  <h2>おすすめ商品</h2>
+  <div class="row mb-5">
+    {% for object in ADDTIONAL_ITEMS %}
+    {% if forloop.counter < 5 %}
+    <div class="col-12 col-lg-3 my-3">
+      {% include 'snippets/item_add_box.html' %}
+    </div>
+    {% endif %}
+    {% endfor %}
+  </div>
+
 </div>
 {% endblock %}
