20260219cimmit add cloudinary

--- a/templates/pages/item.html
+++ b/templates/pages/item.html
@@ -5,7 +5,7 @@
   <div class="row my-5">
     <div class="col-12 col-lg-6">
       <div class="bg-white border overflow-hidden">
-        <img src="/{{ object.image }}" width="100%">
+        <img src="{{ object.image.url }}" width="100%">
       </div>
     </div>
     <div class="col-12 col-lg-6">
