--- a/templates/pages/order.html
+++ b/templates/pages/order.html
@@ -95,7 +95,7 @@
           {% for item in items %}
           <tr>
             <th scope="row">{{ forloop.counter }}</th>
-            <td><img src="/{{item.image}}" width="auto" height="100px"></td>
+            <td><img src="/{{item.image.url}}" width="auto" height="100px"></td>
             <td>{{ item.name }}</td>
             <td>¥{{item.price}}</td>
             <td>{{item.quantity}}</td>
