--- a/templates/snippets/item_add_box.html
+++ b/templates/snippets/item_add_box.html
@@ -1,5 +1,5 @@
 <div class="border">
-  <img src="/{{object.image}}" width="100%" class="bg-white" />
+  <img src="{{object.image.url}}" width="100%" class="bg-white" />
   <div class="bg-light text-center text-secondary overflow-hidden">
     <div class="my-2 py-2">
       <h2 class="lead" style="font-size: 0.9rem;">{{object.name}}</h2>
